force-app/main/default/objects/Feature_Attendee__c/Feature_Attendee__c.object-meta.xml
<CustomObject>
    <description>Junction object between Feature Offering and Contact. Used to track individual and organization attendees.</description>
    <label>Feature Attendee</label>
    <nameField>
        <displayFormat>FA-{0000000}</displayFormat>
        <label>Feature Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>