force-app/main/default/objects/Feature_Attendee__c/fields/Accomodations__c.field-meta.xml
<CustomField>
    <fullName>Accomodations__c</fullName>
    <label>Accomodations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>