force-app/main/default/objects/Feature_Attendee__c/fields/Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Count__c</fullName>
    <description>Number of guests, including children, students, or unregistered adults</description>
    <inlineHelpText>For classrooms, enter the number of students, teaching assistants, and chaperones attending with the primary attendee.</inlineHelpText>
    <label>Attendee Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>