force-app/main/default/objects/Feature_Attendee__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <label>Attendee Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feature Attendees</relationshipLabel>
    <relationshipName>Feature_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>