force-app/main/default/objects/Feature_Attendee__c/fields/Attendee_Role__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Role__c</fullName>
    <label>Attendee Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Special Guest/Honoree</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Moderator</fullName>
            </value>
            <value>
                <fullName>Panelist</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Producer</fullName>
            </value>
            <value>
                <fullName>Subject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>