force-app/main/default/objects/Feature_Attendee__c/fields/Attending_School__c.field-meta.xml
<CustomField>
    <fullName>Attending_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account to relate to the school record of attendee, if applicable</description>
    <label>Attending School</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Account record either does not exist or it is not an Organization record type</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feature Attendees</relationshipLabel>
    <relationshipName>Feature_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>