force-app/main/default/objects/Feature_Attendee__c/fields/Feature_Offering__c.field-meta.xml
<CustomField>
    <fullName>Feature_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature Offering</label>
    <referenceTo>Feature_Offering__c</referenceTo>
    <relationshipLabel>Feature Attendees</relationshipLabel>
    <relationshipName>Feature_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>