force-app/main/default/objects/Feature_Attendee__c/fields/Guest_Names__c.field-meta.xml
<CustomField>
    <fullName>Guest_Names__c</fullName>
    <description>Enter the names of guests</description>
    <label>Guest Name(s)</label>
    <type>TextArea</type>
</CustomField>