force-app/main/default/objects/Feature_Attendee__c/fields/Honorarium__c.field-meta.xml
<CustomField>
    <fullName>Honorarium__c</fullName>
    <label>Honorarium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>