force-app/main/default/objects/Feature_Attendee__c/fields/Lead_Staff__c.field-meta.xml
<CustomField>
    <fullName>Lead_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Staff member in charge of the event</description>
    <label>Lead Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feature_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>