force-app/main/default/objects/Feature_Attendee__c/fields/Lead_Staff_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Lead_Staff_Job_Title__c</fullName>
    <label>Lead Staff Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>